<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    tools:context="hfad.com.workoutwarrior.core"
    android:background="@color/background"
    android:columnCount="4">




    <TextView
        android:id="@+id/coreExercises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coreExercises"
        android:textSize="45sp"
        android:gravity="center"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="4">
    </TextView>


    <Button
        android:id="@+id/abCrunchMachine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/abCrunchMachine"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:background="@color/buttons"
        android:layout_marginTop="10sp">
    </Button>
    <Button
        android:id="@+id/barbellRollout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barbellRollout"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:background="@color/buttons"
        android:layout_marginTop="5sp">
    </Button>
    <Button
        android:id="@+id/bicycleKick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bicycleKick"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:background="@color/buttons"
        android:layout_marginTop="5sp">
    </Button>
    <Button
        android:id="@+id/burpees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/burpees"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:background="@color/buttons"
        android:layout_marginTop="5sp">
    </Button>
    <Button
        android:id="@+id/jackKnife"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jackKnife"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:background="@color/buttons"
        android:layout_marginTop="5sp">
    </Button>
    <Button
        android:id="@+id/musclegroup"
        android:layout_width="81sp"
        android:layout_height="50sp"
        android:text="@string/musclegroup"
        android:textSize="10sp"
        android:gravity="center"
        android:layout_row="9"
        android:layout_column="0"
        android:background="@color/buttons"
        android:layout_marginTop="5sp"
        android:onClick="backToMuscleGroups"
        >
    </Button>
    <Button
        android:id="@+id/exercises"
        android:layout_width="81sp"
        android:layout_height="50sp"
        android:text="@string/exercises"
        android:textSize="10sp"
        android:gravity="center"
        android:layout_row="9"
        android:layout_column="1"
        android:background="@color/buttons"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="3sp">
    </Button>
    <Button
        android:id="@+id/history"
        android:layout_width="81sp"
        android:layout_height="50sp"
        android:text="@string/history"
        android:textSize="10sp"
        android:gravity="center"
        android:layout_row="9"
        android:layout_column="2"
        android:background="@color/buttons"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="3sp"
        android:onClick="toExerciseList">
    </Button>
    <Button
        android:id="@+id/more"
        android:layout_width="81sp"
        android:layout_height="50sp"
        android:text="@string/more"
        android:textSize="10sp"
        android:gravity="center"
        android:layout_row="9"
        android:layout_column="3"
        android:background="@color/buttons"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="3sp"
        >
    </Button>
</GridLayout>
