<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    tools:context="hfad.com.workoutwarrior.MuscleGroup"
    android:columnCount="4"
    android:background="@color/background"
    >


    <TextView
        android:id="@+id/musclegroups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/musclegroups"
        android:textSize="45sp"
        android:gravity="center"
        android:layout_row="0"
        android:layout_columnSpan="4"
        android:paddingBottom="10sp">
    </TextView>

    <Button
        android:id="@+id/chest"
        android:layout_width="162sp"
        android:layout_height="70sp"
        android:text="@string/chest"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:onClick="nextPage"
        android:background="@color/buttons"
        android:layout_marginRight="3sp">
    </Button>
    <Button
        android:id="@+id/back"
        android:layout_width="162sp"
        android:layout_height="70sp"
        android:text="@string/back"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_row="1"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:onClick="toBackExercises"
        android:background="@color/buttons"
        >
    </Button>
    <Button
        android:id="@+id/arms"
        android:layout_width="162sp"
        android:layout_height="70sp"
        android:text="@string/arms"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:onClick="toArmExercises"
        android:background="@color/buttons"
        android:layout_marginRight="3sp"
        android:layout_marginTop="5sp">
    </Button>
    <Button
        android:id="@+id/core"
        android:layout_width="162sp"
        android:layout_height="70sp"
        android:text="@string/core"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:background="@color/buttons"
        android:layout_marginTop="5sp"
        android:onClick="toCoreExercises">
    </Button>
    <Button
        android:id="@+id/legs"
        android:layout_width="162sp"
        android:layout_height="70sp"
        android:text="@string/legs"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:background="@color/buttons"
        android:layout_marginTop="5sp"
        android:layout_marginRight="3sp"
        android:layout_marginBottom="5sp"
        android:onClick="toLegExercises">
    </Button>
    <Button
        android:id="@+id/cardio"
        android:layout_width="162sp"
        android:layout_height="70sp"
        android:text="@string/cardio"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_columnSpan="2"
        android:background="@color/buttons"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="5sp"
        android:onClick="toCardioExercises">
    </Button>
    <ImageView
        android:layout_width="200sp"
        android:layout_height="140sp"
        android:layout_gravity="center"
        android:background="@drawable/flexing"
        android:contentDescription="@drawable/flexing"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="4"/>
    <Button
        android:id="@+id/musclegroup"
        android:layout_width="81sp"
        android:layout_height="50sp"
        android:text="@string/musclegroup"
        android:textSize="10sp"
        android:gravity="center"
        android:layout_row="5"
        android:layout_column="0"
        android:background="@color/footerButtoms"
        android:layout_marginTop="5sp"
        >
    </Button>
    <Button
        android:id="@+id/exercises"
        android:layout_width="81sp"
        android:layout_height="50sp"
        android:text="@string/exercises"
        android:textSize="10sp"
        android:gravity="center"
        android:layout_row="5"
        android:layout_column="1"
        android:background="@color/footerButtoms"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="3sp">
    </Button>
    <Button
        android:id="@+id/history"
        android:layout_width="81sp"
        android:layout_height="50sp"
        android:text="@string/history"
        android:textSize="10sp"
        android:gravity="center"
        android:layout_row="5"
        android:layout_column="2"
        android:background="@color/footerButtoms"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="3sp"
        android:onClick="toExerciseList">
    </Button>
    <Button
        android:id="@+id/more"
        android:layout_width="81sp"
        android:layout_height="50sp"
        android:text="@string/more"
        android:textSize="10sp"
        android:gravity="center"
        android:layout_row="5"
        android:layout_column="3"
        android:background="@color/footerButtoms"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="3sp"
        >
    </Button>
</GridLayout>
