<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    tools:context="hfad.com.workoutwarrior.chest"
    android:columnCount="4"
    android:background="@color/background"
    >


    <TextView
        android:id="@+id/chestExercises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chestExercises"
        android:textSize="45sp"
        android:gravity="center"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="4"
        >
    </TextView>


    <Button
        android:id="@+id/barbellBenchPress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/barbellBenchPress"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:onClick="toBenchPressInput"
        android:background="@color/buttons"
        android:layout_marginTop="10sp"
        >
    </Button>
    <Button
        android:id="@+id/machineChestFlye"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/machineChestFlye"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:background="@color/buttons"
        android:onClick="toChestFlyeInput"
        android:layout_marginTop="5sp">
    </Button>
    <Button
        android:id="@+id/pushup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pushup"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:onClick="toPushUp"
        android:background="@color/buttons"
        android:layout_marginTop="5sp">
    </Button>
    <Button
        android:id="@+id/declineBarbellBenchPress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/declineBarbellBenchPress"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:background="@color/buttons"
        android:onClick="toDeclineBenchPress"
        android:layout_marginTop="5sp">
    </Button>

    <Button
        android:id="@+id/dumbbellFlye"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dumbbellFlye"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:background="@color/buttons"
        android:onClick="toDumbbellFlye"
        android:layout_marginTop="5sp">
    </Button>
    <Button
        android:id="@+id/inclineBarbellBenchPress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inclineBarbellBenchPress"
        android:textSize="15sp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:layout_row="6"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:onClick="toInclineBarbellBenchPress"
        android:background="@color/buttons"
        android:layout_marginTop="5sp">
    </Button>

    <Button
        android:id="@+id/musclegroup"
        android:layout_width="81sp"
        android:layout_height="50sp"
        android:text="@string/musclegroup"
        android:textSize="10sp"
        android:gravity="center"
        android:layout_row="9"
        android:layout_column="0"
        android:background="@color/footerButtoms"
        android:layout_marginTop="5sp"
        android:onClick="backToMuscleGroups"
        >
    </Button>
    <Button
        android:id="@+id/exercises"
        android:layout_width="81sp"
        android:layout_height="50sp"
        android:text="@string/exercises"
        android:textSize="10sp"
        android:gravity="center"
        android:layout_row="9"
        android:layout_column="1"
        android:background="@color/footerButtoms"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="3sp">
    </Button>
    <Button
        android:id="@+id/history"
        android:layout_width="81sp"
        android:layout_height="50sp"
        android:text="@string/history"
        android:textSize="10sp"
        android:gravity="center"
        android:layout_row="9"
        android:layout_column="2"
        android:background="@color/footerButtoms"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="3sp"
        android:onClick="toExerciseList">
    </Button>
    <Button
        android:id="@+id/more"
        android:layout_width="81sp"
        android:layout_height="50sp"
        android:text="@string/more"
        android:textSize="10sp"
        android:gravity="center"
        android:layout_row="9"
        android:layout_column="3"
        android:background="@color/footerButtoms"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="3sp"
        >
    </Button>
</GridLayout>
